--- a/springProject/src/main/resources/templates/index.html
+++ b/springProject/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title></title>
+<link rel="stylesheet" href="/bootstrap-5.2.0-dist/css/bootstrap.css">
+<script src="/bootstrap-5.2.0-dist/js/bootstrap.bundle.js"></script>
 </head>
 <body>
-	<h1>Hi</h1>
 </body>
 </html>
