header, footer 수정 및 productList, filter html 생성

--- a/springProject/src/main/resources/templates/footer.html
+++ b/springProject/src/main/resources/templates/footer.html
@@ -7,34 +7,38 @@
         #footer {
             background-color: skyblue;
         }
-        #footerTop {
-            padding: 10px;
-            background-color: dodgerblue;
+        #footer #footerTop {
             display: flex;
             justify-content: space-evenly;
+            padding: 10px;
+            background-color: dodgerblue;
         }
-        #footerTop a {
-            display: inline-block;
+        #footer #footerTop a {
             text-decoration: none;
             color: white;
         }
-        .vLine {
-            width: 1px;
-            height: 31px;
-            background-color: #e3e3e3;
+        #footer #footerCenter {
+            font-size: 13px;
         }
-        #footerCenter ul {
+        #footer #footerCenter ul {
             margin-top: 40px;
         }
-        #footerCenter li {
+        #footer #footerCenter li {
             list-style: none;
+            margin-bottom: 5px;
         }
-        #copyRight {
-            display: flex;
-            
+        #footer #footerCenter a {
+            color: dodgerblue;
         }
-        #copyRight div{
+        #footer #copyRight {
+            display: flex;      
+        }
+        #footer #copyRight div {
             margin: 20px;
+        }
+        .vLine {
+            width: 1px;
+            background-color: #e3e3e3;
         }
     </style>
 </head>
