--- a/springProject/src/main/resources/templates/index.html
+++ b/springProject/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Project3.com</title>
     <style>
         #swiperMain {
             display: flex;
@@ -50,7 +50,7 @@
     <div id="swiperMain">
         <div id="swiperMainImg">
             <a href="#">
-                <img src="https://cdn.icoda.co.kr/asset/main/1659329913_3848_2196.jpg" alt="mainImg">
+              <img src="https://cdn.icoda.co.kr/asset/main/1659329913_3848_2196.jpg" alt="mainImg">
             </a>
         </div>
     </div>  
@@ -82,7 +82,7 @@
     </div>
     <div id="promotion">
         <div id="promotionImg">
-            <img src="./asus.png" alt="">
+           <img src="./asus.png" alt="">
         </div>
         <div>
             <h1>Big Event</h1>
