header.html 오류수정, 마이페이지-리뷰 리스트 출력으로 수정

--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -76,7 +76,7 @@
                     <label>
                         <input type="text" name="searchInput" id="searchInput" value minlength="2" maxlength="50">
                         <input type="image" value="검색" name="searchIcon" id="searchIcon"
-                            src="https://cdn.icoda.co.kr/asset/img/usr/main/search_btn.jpg" name="searchBtn">
+                            src="https://cdn.icoda.co.kr/asset/img/usr/main/search_btn.jpg">
                     </label>
                 </form>
             </div>
