--- a/springProject/src/main/resources/templates/review/reviewList.html
+++ b/springProject/src/main/resources/templates/review/reviewList.html
@@ -12,7 +12,7 @@ margin: 50px 300px;
 display:flex; justify-content: flex-end;
 }
 #reviewList{
-border: 1px solid lightgrey; border-radius: 10px;
+border: 1px solid lightgrey;
 }
 #buttons{
 display: flex; justify-content: flex-end; margin-right: 50px;
@@ -22,29 +22,33 @@ margin-right: 20px;
 }
 </style>
 <body>
+	<header th:insert="/header"></header>
 	<div id="pageBody">
 	
 		<h1>작성한 리뷰 관리(목록)</h1>
 		<div id="statusText">
-		<p> <strong th:text="${review.user_id}"></strong>님, 총 <strong></strong>개의 리뷰를 등록하셨습니다.</p>
+			<p> <strong></strong>님, 총 <strong></strong>개의 리뷰를 등록하셨습니다.</p>
 		</div>
 		<div id="reviewList">
 		<ol>
-			<li><span th:text="${review.review_title}"></span></li>
-			<div>
-			<span>별점<strong th:text="${review.review_score}"></strong> / 5</span>
-			<span th:text="${#dates.format(review.review_time, 'yyyy-MM-dd')}"></span>
-			</div>
-			<div>
-			<p th:text="${review.review_content}"></p>
-			</div>
-			<div id="buttons">
-			<button>수정</button>
-			<button>삭제</button>
-			</div>
+			<li th:each="review : ${reviews}">
+				<span th:text="${review.review_title}"></span>
+				<div>
+					<span>별점<strong th:text="${review.review_score}"></strong> / 5</span>
+					<span th:text="${#dates.format(review.review_time, 'yyyy-MM-dd')}"></span>
+				</div>
+				<div>
+				<p th:text="${review.review_content}"></p>
+				</div>
+				<div id="buttons">
+					<button>수정</button>
+					<button>삭제</button>
+				</div>
+			</li>
 		</ol>
 		</div>
 	
 	</div>
+	<footer th:insert="/footer"></footer>
 </body>
 </html>
