뷰 페이지 전체적으로 수정

--- a/springProject/src/main/resources/templates/product/productList.html
+++ b/springProject/src/main/resources/templates/product/productList.html
@@ -112,5 +112,6 @@
             </div>     
         </li>
     </ul>
+    <div class="d-flex justify-content-center" th:insert="/paging"></div>
 </body>
 </html>
