--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -75,8 +75,8 @@
                 <form action="#" id="searchForm" name="searchForm" method="get">
                     <label>
                         <input type="text" name="searchInput" id="searchInput" value minlength="2" maxlength="50">
-                        <input type="image" value="검색" name="searchIcon" id="searchIcon"
-                            src="https://cdn.icoda.co.kr/asset/img/usr/main/search_btn.jpg" name="searchBtn">
+                        <input type="image" value="검색" name="searchIcon" id="searchIcon" 
+                               src="https://cdn.icoda.co.kr/asset/img/usr/main/search_btn.jpg">
                     </label>
                 </form>
             </div>
