--- a/springProject/src/main/resources/templates/main.html
+++ b/springProject/src/main/resources/templates/main.html
@@ -14,14 +14,14 @@
             justify-content: space-evenly;
             margin-bottom: 60px;
         }
-        #swiperSub img {
+        #swiperSub .swiperSubImg{
+            text-align: center;
+        }
+        #swiperSub .swiperSubImg img {
             width: 100px;
             height: 100px;
         }
         #swiperSub h3{
-            text-align: center;
-        }
-        #swiperSubImg, #swiperSubImg2{
             text-align: center;
         }
         #promotion {
@@ -29,7 +29,10 @@
             justify-content: center;
             margin-bottom: 60px;
         }
-        #promotion img {
+        #promotion #promotionImg {
+            margin-right: 120px;
+        }
+        #promotion #promotionImg img {
             width: 500px;
             height: 300px;
         }
@@ -40,9 +43,6 @@
             color: white;
             padding: 10px 15px;
             border-radius: 5px;
-        }
-        #promotionImg {
-            margin-right: 120px;
         }
     </style>
 </head>
@@ -56,27 +56,25 @@
     </div>  
     <div id="swiperSub">
         <div>
-            <div id="swiperSubImg">
+            <div class="swiperSubImg">
                 <a href="#">
                     <img src="./45-450792_laptop-png-gaming-laptop-png-lenovo-transparent-png.png" alt="">
                 </a>    
             </div>
             <h3>게이밍 노트북</h3>
             <p>
-            노트북으로도 
-    다이나믹한 속도를 즐겨보세요!
+                노트북으로도 다이나믹한 속도를 즐겨보세요!
             </p>
         </div>
         <div>
-            <div id="swiperSubImg2">
+            <div class="swiperSubImg">
                 <a href="#">
                     <img src="./apple-logo-52C416BDDD-seeklogo.com.png" alt="">
                 </a>  
             </div>
             <h3>Apple Zone</h3>
             <p>
-              애플의
-     다양한 제품을 만나보세요!
+                애플의 다양한 제품을 만나보세요!
             </p>
         </div>
     </div>
@@ -87,13 +85,17 @@
         <div>
             <h1>Big Event</h1>
             <h2>아수스 노트북 특가전</h3>
-            <p><strong>최신 Intel, AMD가 탑재된</strong><br>
-                아수스의 노트북을 특가로 만나보세요!<br> 
-                22.08.01부터 소진시</p>
+            <p>
+                <strong>최신 Intel, AMD가 탑재된</strong>
+                <br>
+                    아수스의 노트북을 특가로 만나보세요!
+                <br> 
+                    22.08.01부터 소진시
+            </p>
             <div>
                 <a href="#">특가 바로가기</a>
             </div>
         </div>
-    </div>       
+    </div>  
 </body>
 </html>
