--- a/springProject/src/main/resources/templates/product/productList.html
+++ b/springProject/src/main/resources/templates/product/productList.html
@@ -75,6 +75,7 @@
     </style>
 </head>
 <body>
+	<header th:insert="/header"></header>
     <ul id="productList">
         <li>
             <div class="thumbnail">이미지 영역</div>
@@ -112,6 +113,6 @@
             </div>     
         </li>
     </ul>
-    <div class="d-flex justify-content-center" th:insert="/paging"></div>
+    <footer th:insert="/footer"></footer>
 </body>
 </html>
