--- a/springProject/src/main/resources/templates/index.html
+++ b/springProject/src/main/resources/templates/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
+    	body {
+    		margin: 0;
+    		padding: 0;
+    	}
         #swiperMain {
             display: flex;
             justify-content: center;
@@ -47,6 +51,7 @@
     </style>
 </head>
 <body>
+	<header th:insert="/header"></header>
     <div id="swiperMain">
         <div id="swiperMainImg">
             <a href="#">
@@ -97,5 +102,6 @@
             </div>
         </div>
     </div>  
+    <footer th:insert="/footer"></footer>
 </body>
 </html>
