product controller, mapper, xml생성. productDetailPage.html에구현 및 생성했던 html파일 encoding 변경

--- a/springProject/src/main/resources/templates/review/reviewModify.html
+++ b/springProject/src/main/resources/templates/review/reviewModify.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="EUC-KR">
-<title>ÀÛ¼ºÇÑ ¸®ºä(¼öÁ¤)</title>
+<meta charset="UTF-8">
+<title>ìž‘ì„±í•œ ë¦¬ë·°(ìˆ˜ì •)</title>
 </head>
 <style>
 #pageBody{
@@ -33,25 +33,25 @@ margin: 25px;
 <body>
 	<div id="pageBody">
 	
-		<h1>ÀÛ¼ºÇÑ ¸®ºä °ü¸®(¼öÁ¤ÆäÀÌÁö)</h1>
+		<h1>ìž‘ì„±í•œ ë¦¬ë·° ê´€ë¦¬(ìˆ˜ì •íŽ˜ì´ì§€)</h1>
 		<div id="statusText">
-		<p> <strong>user1</strong>´Ô, ÃÑ <strong>1</strong>°³ÀÇ ¸®ºä¸¦ µî·ÏÇÏ¼Ì½À´Ï´Ù.</p>
+		<p> <strong>user1</strong>ë‹˜, ì´ <strong>1</strong>ê°œì˜ ë¦¬ë·°ë¥¼ ë“±ë¡í•˜ì…¨ìŠµë‹ˆë‹¤.</p>
 		</div>
 		<div id="reviewList">
 		<ol>
 			<li>
-				<input id="titleModify" type="text" value="Àú·ÅÇÏ°Ô Àß ±¸¸ÅÇß½À´Ï´Ù." style="font-size: 20px;">
+				<input id="titleModify" type="text" value="ì €ë ´í•˜ê²Œ ìž˜ êµ¬ë§¤í–ˆìŠµë‹ˆë‹¤." style="font-size: 20px;">
 			</li>
 			<div id="scoreModify">
-			<span>º°Á¡ <input id="score" type="number" step="0.5" min="0" max="5.0" value="4.5" style="font-size: 15px;"> / 5.0</span>
+			<span>ë³„ì  <input id="score" type="number" step="0.5" min="0" max="5.0" value="4.5" style="font-size: 15px;"> / 5.0</span>
 			<span> <strong>2022.08.16</strong> </span>
 			</div>
 			<div id="contentModify">
-			<textarea rows="10px" cols="100px" style="font-size: 20px;"> ½ÃÁß¿¡ ³ª¿ÍÀÖ´Â °¡°Ý Áß¿¡ Á¦ÀÏ Àú·ÅÇÏ°Ô ±¸¸ÅÇß½À´Ï´Ù. ¹è¼Ûµµ ¹®Á¦¾øÀÌ Àß µµÂøÇß½À´Ï´Ù.</textarea>
+			<textarea rows="10px" cols="100px" style="font-size: 20px;"> ì‹œì¤‘ì— ë‚˜ì™€ìžˆëŠ” ê°€ê²© ì¤‘ì— ì œì¼ ì €ë ´í•˜ê²Œ êµ¬ë§¤í–ˆìŠµë‹ˆë‹¤. ë°°ì†¡ë„ ë¬¸ì œì—†ì´ ìž˜ ë„ì°©í–ˆìŠµë‹ˆë‹¤.</textarea>
 			</div>
 			<div id="buttons">
-			<button>Ãë¼Ò</button>
-			<button>¼öÁ¤¿Ï·á</button>
+			<button>ì·¨ì†Œ</button>
+			<button>ìˆ˜ì •ì™„ë£Œ</button>
 			</div>
 		</ol>
 		</div>
