--- a/springProject/src/main/resources/templates/payment/paymentPage.html
+++ b/springProject/src/main/resources/templates/payment/paymentPage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="EUC-KR">
-<title>°áÁ¦ ÆäÀÌÁö</title>
+<meta charset="UTF-8">
+<title>ê²°ì œ íŽ˜ì´ì§€</title>
 </head>
 <style>
 h1 {
@@ -16,21 +16,21 @@ margin-bottom: 70px;
 }
 </style>
 <body>
-	<h1>°áÁ¦ ÆäÀÌÁöÀÔ´Ï´Ù.</h1>
+	<h1>ê²°ì œ íŽ˜ì´ì§€ìž…ë‹ˆë‹¤.</h1>
 	<div id="pageOutline">
 		<div id="firstSection">
 			<div id="UserInfo">
-			<h2>ÁÖ¹® Á¤º¸</h2>
+			<h2>ì£¼ë¬¸ ì •ë³´</h2>
 			<hr>
-					ÁÖ¹®ÀÚ * <input type="text"><br>
-					ÀÌ¸ÞÀÏ * <input type="text"> @
+					ì£¼ë¬¸ìž * <input type="text"><br>
+					ì´ë©”ì¼ * <input type="text"> @
 					<select name="email">
 					<option>gmail.com</option>
 					<option>kakao.com</option>
 					<option>naver.com</option>
 					</select>
 					<br>
-					ÀüÈ­¹øÈ£ *
+					ì „í™”ë²ˆí˜¸ *
 					<select>
 					<option>010</option>
 					<option>011</option>
@@ -42,29 +42,29 @@ margin-bottom: 70px;
 					<input type="tel" size="3">
 					<input type="tel" size="3">
 					<br>
-					ÁÖ¼Ò *
-					<input type="text" placeholder="¿ìÆí¹øÈ£" size="5">
-					<button>ÁÖ¼Ò°Ë»ö</button> <br>
-					<input type="text" placeholder="±âº»ÁÖ¼Ò"><br>
-					<input type="text" placeholder="³ª¸ÓÁöÁÖ¼Ò(¼±ÅÃÀÔ·Â°¡´É)"><br>
+					ì£¼ì†Œ *
+					<input type="text" placeholder="ìš°íŽ¸ë²ˆí˜¸" size="5">
+					<button>ì£¼ì†Œê²€ìƒ‰</button> <br>
+					<input type="text" placeholder="ê¸°ë³¸ì£¼ì†Œ"><br>
+					<input type="text" placeholder="ë‚˜ë¨¸ì§€ì£¼ì†Œ(ì„ íƒìž…ë ¥ê°€ëŠ¥)"><br>
 			</div>
 			<div id="shippingAdress">
-			<h2>¹è¼ÛÁö</h2>
+			<h2>ë°°ì†¡ì§€</h2>
 			<hr>
-				<button>ÃÖ±Ù¹è¼ÛÁö</button>
-				<button>Á÷Á¢ÀÔ·Â</button>
+				<button>ìµœê·¼ë°°ì†¡ì§€</button>
+				<button>ì§ì ‘ìž…ë ¥</button>
 				<br>
 				<form method="post">
-				<input type="radio" name="shippingAdress" value="same">ÁÖ¹®ÀÚ Á¤º¸¿Í µ¿ÀÏ
-				<input type="radio" name="shippingAdress" value="new">»õ·Î¿î ¹è¼ÛÁö
+				<input type="radio" name="shippingAdress" value="same">ì£¼ë¬¸ìž ì •ë³´ì™€ ë™ì¼
+				<input type="radio" name="shippingAdress" value="new">ìƒˆë¡œìš´ ë°°ì†¡ì§€
 				</form>
-				¹Þ´Â»ç¶÷ * <input type="text"><br>
-				ÁÖ¼Ò *
-					<input type="text" placeholder="¿ìÆí¹øÈ£" size="5">
-					<button>ÁÖ¼Ò°Ë»ö</button> <br>
-					<input type="text" placeholder="±âº»ÁÖ¼Ò"><br>
-					<input type="text" placeholder="³ª¸ÓÁöÁÖ¼Ò(¼±ÅÃÀÔ·Â°¡´É)"><br>
-					ÀüÈ­¹øÈ£ *
+				ë°›ëŠ”ì‚¬ëžŒ * <input type="text"><br>
+				ì£¼ì†Œ *
+					<input type="text" placeholder="ìš°íŽ¸ë²ˆí˜¸" size="5">
+					<button>ì£¼ì†Œê²€ìƒ‰</button> <br>
+					<input type="text" placeholder="ê¸°ë³¸ì£¼ì†Œ"><br>
+					<input type="text" placeholder="ë‚˜ë¨¸ì§€ì£¼ì†Œ(ì„ íƒìž…ë ¥ê°€ëŠ¥)"><br>
+					ì „í™”ë²ˆí˜¸ *
 					<select>
 					<option>010</option>
 					<option>011</option>
@@ -77,32 +77,32 @@ margin-bottom: 70px;
 					<input type="tel" size="3">
 					<br>
 					<select>
-					<option>¹è¼Û ¸Þ¼¼Áö¼±ÅÃ(¼±ÅÃ»çÇ×)</option>
-					<option>¹è¼Û Àü ¿¬¶ô¹Ù¶ø´Ï´Ù.</option>
-					<option>ºÎÀç½Ã ¿¬¶ô¹Ù¶ø´Ï´Ù.</option>
-					<option>ºÎÀç½Ã ¹® ¾Õ¿¡ ³öÁÖ¼¼¿ä.</option>
+					<option>ë°°ì†¡ ë©”ì„¸ì§€ì„ íƒ(ì„ íƒì‚¬í•­)</option>
+					<option>ë°°ì†¡ ì „ ì—°ë½ë°”ëžë‹ˆë‹¤.</option>
+					<option>ë¶€ìž¬ì‹œ ì—°ë½ë°”ëžë‹ˆë‹¤.</option>
+					<option>ë¶€ìž¬ì‹œ ë¬¸ ì•žì— ë†”ì£¼ì„¸ìš”.</option>
 					</select>
 			</div>
 		</div>
 		<div id="SecondSection">
 			<div id="paymentMethod">
-			<h2>°áÁ¦¼ö´Ü</h2>
+			<h2>ê²°ì œìˆ˜ë‹¨</h2>
 			<hr>
 				<fieldset>
-				<legend>°áÁ¦ ¼ö´Ü ¼±ÅÃ</legend>
-				<input type="radio">½Å¿ëÄ«µå
-				<input type="radio">°èÁÂÀÌÃ¼
-				<input type="radio">¹«ÅëÀåÀÔ±Ý
-				<input type="radio">°¡»ó°èÁÂ
+				<legend>ê²°ì œ ìˆ˜ë‹¨ ì„ íƒ</legend>
+				<input type="radio">ì‹ ìš©ì¹´ë“œ
+				<input type="radio">ê³„ì¢Œì´ì²´
+				<input type="radio">ë¬´í†µìž¥ìž…ê¸ˆ
+				<input type="radio">ê°€ìƒê³„ì¢Œ
 				</fieldset>
-				<input type="checkbox"> °áÁ¦¼ö´ÜÀ» ´ÙÀ½¿¡µµ »ç¿ë
+				<input type="checkbox"> ê²°ì œìˆ˜ë‹¨ì„ ë‹¤ìŒì—ë„ ì‚¬ìš©
 			</div>
 			<div id="paymentInfo">
-			<h2>°áÁ¦Á¤º¸</h2>
+			<h2>ê²°ì œì •ë³´</h2>
 			<hr>
-				<p><span>ÁÖ¹®»óÇ°</span> <strong>839,000</strong></p>
-				<p><span>¹è¼Ûºñ</span> <strong>0</strong></p>
-				<p><span>°áÁ¦±Ý¾×</span> <strong>839,000 ¿ø</strong></p> 
+				<p><span>ì£¼ë¬¸ìƒí’ˆ</span> <strong>839,000</strong></p>
+				<p><span>ë°°ì†¡ë¹„</span> <strong>0</strong></p>
+				<p><span>ê²°ì œê¸ˆì•¡</span> <strong>839,000 ì›</strong></p> 
 			</div>
 		</div>
 	</div>
