--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -64,6 +64,8 @@
             margin: 0 15px;
         }
     </style>
+    <link rel="stylesheet" href="/bootstrap-5.2.0-dist/css/bootstrap.css">
+	<script src="/bootstrap-5.2.0-dist/js/bootstrap.bundle.js"></script>
 </head>
 <body>
     <div id="header">
