userUpdate.html에 header와 footer 추가

--- a/springProject/src/main/resources/templates/user/userUpdate.html
+++ b/springProject/src/main/resources/templates/user/userUpdate.html
@@ -58,6 +58,8 @@
 </style>
 
 <body>
+	<header th:insert="/header"></header>
+
 	<h1 class="title">회원 정보 수정</h1>
 	<hr>
 	<br>
@@ -130,5 +132,7 @@
 		</div>
 		
 	</form>
+	
+	<footer th:insert="/footer"></footer>
 </body>
 </html>
