userUpdate.html 수정

--- a/springProject/src/main/resources/templates/user/userUpdate.html
+++ b/springProject/src/main/resources/templates/user/userUpdate.html
@@ -105,12 +105,10 @@
 					</div>
 					<br>
 					<div id="userAddressInput">
-						<div>
-							<div class="wd100" style="vertical-align: middle;">주소</div>
-						</div>
+						<div class="wd100">주소</div>
 						<div>
 							<div class="verti">
-								<input name="userAddress" style="width: 100px;">
+								<input name="userAddress" class="wd100">
 								<button type="button">주소검색</button>
 							</div>
 							<div>
