qna, faq controller, mapper, mapper.xml, html 뷰 페이지 bootstrap 적용, css 폴더 및 파일들 생성

--- a/springProject/src/main/resources/templates/footer.html
+++ b/springProject/src/main/resources/templates/footer.html
@@ -3,44 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <style>
-        #footer {
-            background-color: skyblue;
-        }
-        #footer #footerTop {
-            display: flex;
-            justify-content: space-evenly;
-            padding: 10px;
-            background-color: dodgerblue;
-        }
-        #footer #footerTop a {
-            text-decoration: none;
-            color: white;
-        }
-        #footer #footerCenter {
-            font-size: 13px;
-        }
-        #footer #footerCenter ul {
-            margin-top: 40px;
-        }
-        #footer #footerCenter li {
-            list-style: none;
-            margin-bottom: 5px;
-        }
-        #footer #footerCenter a {
-            color: dodgerblue;
-        }
-        #footer #copyRight {
-            display: flex;      
-        }
-        #footer #copyRight div {
-            margin: 20px;
-        }
-        .vLine {
-            width: 1px;
-            background-color: #e3e3e3;
-        }
-    </style>
+    <link rel="stylesheet" href="/public/css/footer.css">
 </head>
 <body>
     <div id="footer">
