--- a/springProject/src/main/resources/templates/product/productNav.html
+++ b/springProject/src/main/resources/templates/product/productNav.html
@@ -3,92 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <style>
-        #productNav {
-            display: flex;
-            justify-content: space-between;
-            width: 1200px;
-            height: 60px;
-            background-color: #f8f8f8;
-            border: 1px solid;
-            font-size: 14px;
-        }
-        #productNav #navFlex {
-            display: flex;
-            align-items: center;
-        }
-        #productNav #navFlex a {
-            text-decoration: none;
-            color: black;
-        }
-        #productNav #navFlex .filterTab {
-            cursor: pointer;
-            margin: 0 25px;
-        }
-        #productNav #limit {
-            display: flex;
-            align-items: center;
-            margin-right: 25px;
-        }
-        #productNav #limit #pageLimit {
-            border: solid 1px #e3e3e3;
-            background-color: #ffffff;
-            padding: 5px 10px;
-            cursor: pointer;
-        }
-        .vLine {
-            width: 1px;
-            height: 31px;
-            background-color: #e3e3e3;
-        }
-    </style>
+	<link rel="stylesheet" href="/public/css/productNav.css">
 </head>
 <body>
-    <nav id="productNav">
-        <div id="navFlex">
-            <div class="filterTab">
-                <a href="#">추천순</a>
-            </div>
-            <div class="vLine"></div>
-            <div class="filterTab">
-                <a href="#">판매량순</a>
-            </div>
-            <div class="vLine"></div>
-            <div class="filterTab">
-                <a href="#">할인율순</a>
-            </div>
-            <div class="vLine"></div>
-            <div class="filterTab">
-                <a href="#">낮은가격순</a>
-            </div>
-            <div class="vLine"></div>
-            <div class="filterTab">
-                <a href="#">높은가격순</a>
-            </div>
-            <div class="vLine"></div>
-            <div class="filterTab">
-                <a href="#">최근등록순</a>
-            </div>
-            <div class="vLine"></div>
-            <div class="filterTab">
-                <a href="#">후기많은순</a>
-            </div>
-        </div>
-        <div id="limit">
-            <div id="pageLimit">
-                <div>
-                    <span id="limitTxt">20</span>개씩 보기
-                    <span id="selectBtnSpan">
-                        <img class="selectBtn" src="https://cdn.icoda.co.kr/asset/img/usr/estimate/select_btn.png">
-                    </span>
-                </div>
-                <div id="showPageLimit" style="display: none;">
-                    <div data-limit="20">20개씩 보기</div>
-                    <div data-limit="40">40개씩 보기</div>
-                    <div data-limit="60">60개씩 보기</div>
-                </div>
-            </div>
-        </div>
-    </nav>
+    <nav id="productNav" class="navbar navbar-expand-lg bg-light border">
+	  <div class="container-fluid">
+	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+	      <span class="navbar-toggler-icon"></span>
+	    </button>
+	    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+	      <ul class="navbar-nav d-flex justify-content-between">
+	        <li class="nav-item">
+	          <a class="nav-link active" aria-current="page" href="#">추천순</a>
+	        </li>
+	        <div class="vLine"></div>
+	        <li class="nav-item">
+	          <a class="nav-link" href="#">판매량순</a>
+	        </li>
+	        <div class="vLine"></div>
+	        <li class="nav-item">
+	          <a class="nav-link" href="#">할인율순</a>
+	        </li>
+	        <div class="vLine"></div>
+	        <li class="nav-item">
+	          <a class="nav-link" href="#">낮은가격순</a>
+	        </li>
+	        <div class="vLine"></div>
+	        <li class="nav-item">
+	          <a class="nav-link" href="#">높은가격순</a>
+	        </li>
+	        <div class="vLine"></div>
+	        <li class="nav-item">
+	          <a class="nav-link" href="#">후기많은순</a>
+	        </li>
+	        <div class="vLine"></div>
+	        <li class="nav-item dropdown">
+	          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+	            수량
+	          </a>
+	          <ul class="dropdown-menu">
+	            <li><a class="dropdown-item" href="#" data-limit="20">20개씩 보기</a></li>
+	            <li><a class="dropdown-item" href="#" data-limit="40">40개씩 보기</a></li>
+	            <li><a class="dropdown-item" href="#" data-limit="60">60개씩 보기</a></li>
+	          </ul>
+	        </li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
 </body>
 </html>
