--- a/springProject/src/main/resources/templates/product/productList.html
+++ b/springProject/src/main/resources/templates/product/productList.html
@@ -3,99 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <style>
-        #productContainer {
-            padding: 0;
-        }
-        #productContainer li {
-        	display: flex;
-        	justify-content: center;
-        }
-        #productContainer li .productList {
-            display: flex;
-            list-style: none;
-            border: 1px solid;
-            padding: 15px;
-        }
-        #productContainer .thumbnail {
-            width: 130px;
-            height: 130px;
-            border: 1px solid;
-            margin-right: 30px;
-        }
-        #productContainer .listInfo div{
-            margin-bottom: 20px;
-        }
-        #productContainer .listInfo .title a {
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-        }
-        #productContainer .listInfo .detail {
-            width: 450px;
-            height: 150px;
-            border: 1px solid;
-            font-size: 12px;
-        }
-        #productContainer .listInfo .property {
-            display: inline-block;
-            padding: 3px 6px;
-            border: 1px solid;
-            margin-right: 10px;
-        }
-        #productContainer .listPrice {
-            border: 1px solid;
-            padding: 10px 15px;
-        }
-        #productContainer .listPrice .sale {
-            font-size: 20px;
-            font-weight: bold;
-            color: red;
-        }
-        #productContainer .listPrice div {
-            margin-bottom: 10px;
-        }
-        #productContainer .listPrice .originalPrice {
-            text-decoration: line-through;
-        }
-        #productContainer .listPrice .price .saledPrice {
-            font-size: 24px;
-            font-weight: bold;
-        }
-        #productContainer .listPrice .basketBuy a {
-            display: inline-block;
-            text-decoration: none;
-            color: black;
-            border: 1px solid;
-            padding: 10px 15px;
-        }
-        .vLine {
-            width: 1px;
-            margin: 0 20px;
-            background-color: #e3e3e3;
-        }
-    </style>
+	<link rel="stylesheet" href="/public/css/productList.css">
 </head>
 <body>
 	<header th:insert="/header"></header>
+	<nav id="" th:insert="/product/productNav"></nav>
     <ul id="productContainer">
         <li th:each="product : ${products}">
-          <div class="productList">
-            <div class="thumbnail">이미지 영역</div>
+          <div class="productList border">
+            <div class="thumbnail border">이미지 영역</div>
             <div class="listInfo">
                 <div class="title">
                     <a href="#" th:text="${product.prod_name}"></a>
                 </div>
-                <div class="detail">    
+                <div class="detail border">    
                     제품 설명란        
                 </div>
                 <div class="properties">
-                    <span id="sale" class="property">SALE</span>
-                    <span id="free" class="property">무료 배송</span>
+                    <span id="sale" class="property text-danger border border-danger">SALE</span>
+                    <span id="free" class="property text-success border border-success">무료 배송</span>
                 </div>
             </div>
             <div class="vLine"></div>
-            <div class="listPrice">
+            <div class="listPrice border">
                 <div>
                     <span class="sale">%</span>
                     <span class="originalPrice">원</span>
@@ -104,14 +34,33 @@
                     <span class="saledPrice" th:text="${#numbers.formatInteger(product.prod_price, 3, 'COMMA')} + '원'"></span>
                 </div>
                 <div class="reviewStar">
-                    <span>
-                        ❤❤❤❤❤
-                    </span>
-                    <span>5</span>
+                <span class="text-danger">
+	                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+					  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+					</svg>
+	                <i class="bi bi-star-fill"></i>
+	                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+					  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+					</svg>
+	                <i class="bi bi-star-fill"></i>
+	                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+					  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+					</svg>
+	                <i class="bi bi-star-fill"></i>
+	                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-half" viewBox="0 0 16 16">
+					  <path d="M5.354 5.119 7.538.792A.516.516 0 0 1 8 .5c.183 0 .366.097.465.292l2.184 4.327 4.898.696A.537.537 0 0 1 16 6.32a.548.548 0 0 1-.17.445l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256a.52.52 0 0 1-.146.05c-.342.06-.668-.254-.6-.642l.83-4.73L.173 6.765a.55.55 0 0 1-.172-.403.58.58 0 0 1 .085-.302.513.513 0 0 1 .37-.245l4.898-.696zM8 12.027a.5.5 0 0 1 .232.056l3.686 1.894-.694-3.957a.565.565 0 0 1 .162-.505l2.907-2.77-4.052-.576a.525.525 0 0 1-.393-.288L8.001 2.223 8 2.226v9.8z"/>
+					</svg>
+	                <i class="bi bi-star-half"></i>
+	                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16">
+					  <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
+					</svg>
+	                <i class="bi bi-star"></i>
+                </span>
+                <span>3.5</span>
                 </div>
-                <div class="basketBuy">
-                    <a href="#">장바구니</a>
-                    <a href="#">구매하기</a>
+                <div class="basketBuy btn-group">
+                    <a href="#" class="btn btn-light border">장바구니</a>
+                    <a href="#" class="btn btn-light border">구매하기</a>
                 </div>
             </div>     
           </div>
